welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
	var cond:Boolean = 0
  while (cond){
    if(estSurBiscuit()){
      prendBiscuit()
      baisseBrosse()
      leveBrosse()
      cond=false
    }
    else if (isFacingTrail(c)){
      avance()
    }
    else{
      gauche()
      if (!isFacingTrail(c)){
        gauche();gauche()
      }
    }
  }
 }

def isFacingTrail(c:Color):Boolean = {
  var bo:Boolean = !estFaceMur()
  if (bo){
  	avance()
  	bo = (getCouleurSol()==c)
  	recule()
  }
  return bo
  
}